added api to get All the list of the users registerd to a particular confrence
