# api/v1/routes/confrence/index.js
@@ -13,10 +13,7 @@ router.post("/getAllConfrence", AuthHelper.authorize, aclPermissions.getPermissi
 router.post("/editConfrence", AuthHelper.authorize, aclPermissions.getPermissions, ConfrenceControllerV1.editConfrence);
 router.post("/registerConfrence", AuthHelper.authorize, aclPermissions.getPermissions, ConfrenceControllerV1.registerConfrence);
 router.post("/unRegisterConfrence", AuthHelper.authorize, aclPermissions.getPermissions, ConfrenceControllerV1.leaveConfrence);
-
-// register confrence 
-//unregister confrence
-// get All users registerd to confrence
+router.post("/getAllUsersOfConfrence",AuthHelper.authorize, aclPermissions.getPermissions, ConfrenceControllerV1.getAllUsersOfConfrence)
 // update sepeaker 
 // vote speaker for confrence
 // get top speakers of confrence
